opam-version: "2.0"

synopsis: "Bisect_ppx + Js_of_ocaml starter repo"
homepage: "https://github.com/aantron/bisect-starter-jsoo"
bug-reports: "https://github.com/aantron/bisect_ppx/issues"
authors: "Anton Bachin <antonbachin@yahoo.com>"
maintainer: "Anton Bachin <antonbachin@yahoo.com>"

depends: [
  "bisect_ppx" {dev & >= "2.0.0"}
  "dune"
  "js_of_ocaml"
  "ocaml"
]

pin-depends: [
  ["bisect_ppx.git" "git+https://github.com/aantron/bisect_ppx.git"]
]
